[build-system]
requires = ["setuptools>=61,<74", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phenopacket-fhir"
version = "0.1.1"
description = "Map GA4GH Phenopackets v2 to FHIR R4 Questionnaire / QuestionnaireResponse"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["phenopackets", "fhir", "ga4gh", "rare-disease", "interoperability", "hl7"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# No runtime dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
phenopacket-fhir = "phenopackets_fhir.cli:main"

[project.urls]
Homepage = "https://github.com/Donaschmi/phenopacket-fhir"
"Bug Tracker" = "https://github.com/Donaschmi/phenopacket-fhir/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["phenopackets_fhir*"]

[tool.setuptools.package-data]
phenopackets_fhir = ["example_phenopacket.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
